--- a/NGMASSAGES/css/style.css
+++ b/NGMASSAGES/css/style.css
@@ -12,3 +12,11 @@ h1 {
     font-family:Georgia, 'Times New Roman', Times, serif
 
 }
+
+h2 {
+    color: red;
+    text-align:center;
+    padding-top: 20px;
+    font-family:Georgia, 'Times New Roman', Times, serif
+
+}
